--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Xin Chào 500 anh em</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, quod.</p>
 </body>
 
 </html>
