--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <h1>Xin Chào 500 anh em</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, quod.</p>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati est expedita recusandae numquam, provident
+        aspernatur omnis quisquam eveniet cumque delectus.
+    </h2>
 </body>
 
 </html>
