--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                             <a href="">Bài thi</a>
                         </li>
                         <li>
-                            <a href="">Tài liệu<i class="icon fa-solid fa-caret-down"></i></a>
+                            <a href="">Tài liệu</a>
                         </li>
                         <li>
-                            <a href="">Trợ giúp<i class="icon fa-solid fa-circle-question"></i></a>
+                            <a href=""><i class="icon fa-solid fa-circle-question"></i>Trợ giúp</a>
                         </li>
                         <li>
-                            <a href="">Hỏi đáp<i class="icon fa-solid fa-person-circle-question"></i></a>
+                            <a href=""><i class="icon fa-solid fa-person-circle-question"></i>Hỏi đáp</a>
                         </li>
                     </ul>
                 </nav>
