--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 </nav>
                 <!-- Header Form đăng nhập/đăng kí -->
                 <div class="flex-container full-height">
-                    <a class="btn">Đăng kí</a>
-                    <a class="btn btn-filled">Đăng nhập</a>
+                    <a href="https://cungthi.online/dang-nhap.html" class="btn">Đăng kí</a>
+                    <a href="https://cungthi.online/dang-nhap.html" class="btn btn-filled">Đăng nhập</a>
                 </div>
             </div>
         </div>
