--- a/signup.html
+++ b/signup.html
@@ -19,11 +19,16 @@
 <body>
     <div class="container">
         <div class="forms">
-            <!-- Đăng nhập -->
+            <!-- Đăng ký -->
             <div class="form login">
-                <span class="title">Đăng nhập</span>
+                <span class="title">Đăng ký</span>
 
                 <form action="#">
+                    <div class="input-field">
+                        <input type="text" placeholder="Nhập họ tên" required>
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+
                     <div class="input-field">
                         <input type="text" placeholder="Nhập email" required>
                         <i class="fa-solid fa-envelope icon"></i>
@@ -31,25 +36,21 @@
 
                     <div class="input-field">
                         <input type="password" placeholder="Nhập mật khẩu" required>
-                        <i class="fa-solid fa-key icon"></i>
+                        <i class="fa-solid fa-lock"></i>
                     </div>
-
-                    <div class="checkbox-text">
-                        <div class="checkbox-content">
-                            <input type="checkbox" id="logCheck">
-                            <label for="logCheck" class="text">Lưu mật khẩu</label>
-                        </div>
-                        <a href="#" class="text">Quên mật khẩu ?</a>
+                    <div class="input-field">
+                        <input type="password" placeholder="Nhập lại mật khẩu" required>
+                        <i class="fa-solid fa-lock"></i>
                     </div>
 
                     <div class="input-field button">
-                        <input type="submit" value="Đăng nhập" required>
+                        <input type="submit" value="Đăng ký" required>
                     </div>
                 </form>
 
                 <div class="login-signup">
-                    <span class="text"> Chưa có tài khoản?
-                        <a href="" class="text signup-text">Đăng ký ngay</a>
+                    <span class="text"> Chấp nhận
+                        <a href="" class="text signup-text">điều khoản sử dụng</a>
                     </span>
                 </div>
 
