--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,7 @@
     <title>WEB-LTW4</title>
     <link rel="stylesheet" href="logincss.css">
     <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.1.1-web/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/new-lgoteam.png">
@@ -43,8 +44,8 @@
                         <i class="fa-solid fa-lock"></i>
                     </div>
 
-                    <div class="input-field button">
-                        <input type="submit" value="Đăng ký" required>
+                    <div class="input-field">
+                        <input class="btn btn-filled" type="submit" value="Đăng ký" required>
                     </div>
                 </form>
 
