--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="forms">
             <!-- Đăng nhập -->
-            <div class="form login">
+            <div class="form">
                 <span class="title">Đăng nhập</span>
 
                 <form action="#">
