--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="forms">
             <!-- Đăng ký -->
-            <div class="form login">
+            <div class="form">
                 <span class="title">Đăng ký</span>
 
                 <form action="#">
