--- a/index.html
+++ b/index.html
@@ -18,40 +18,32 @@
 
 <body>
     <div class="main">
-        <!-- Thanh Header -->
-        <div class="header">
-            <!-- Quy định căn màn hình Responsive -->
-            <div class="grid full-height flex-container">
-                <!-- Header logo -->
-                <a href="#">
-                    <img class="logo-header" src="./assets/img/new-lgoteam" alt="logo-team4">
-                </a>
-                <!-- Header navigation -->
-                <nav class="navbar">
-                    <!-- Header Menu -->
-                    <ul class="navbar-list grid-container full-height">
-                        <li>
-                            <a href=""><i class="icon fa-solid fa-house"></i>Trang chủ</a>
-                        </li>
-                        <li>
-                            <a href="">Bài thi</a>
-                        </li>
-                        <li>
-                            <a href="">Tài liệu</a>
-                        </li>
-                        <li>
-                            <a href=""><i class="icon fa-solid fa-circle-question"></i>Trợ giúp</a>
-                        </li>
-                        <li>
-                            <a href=""><i class="icon fa-solid fa-person-circle-question"></i>Hỏi đáp</a>
-                        </li>
-                    </ul>
-                </nav>
-                <!-- Header Form đăng nhập/đăng kí -->
-                <div class="flex-container full-height">
-                    <a href="https://cungthi.online/dang-nhap.html" class="btn">Đăng kí</a>
-                    <a href="https://cungthi.online/dang-nhap.html" class="btn btn-filled">Đăng nhập</a>
-                </div>
+        <div class="grid-container header">
+            <a href="#" class="grid-child-left">
+                <img class="logo-header" src="./assets/img/new-lgoteam" alt="logo-team4">
+            </a>
+            <nav class="navbar full-height grid-child-stretch">
+                <ul class="navbar-list grid-container full-height">
+                    <li>
+                        <a href=""><i class="icon fa-solid fa-house"></i>Trang chủ</a>
+                    </li>
+                    <li>
+                        <a href="">Bài thi</a>
+                    </li>
+                    <li>
+                        <a href="">Tài liệu</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="icon fa-solid fa-circle-question"></i>Trợ giúp</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="icon fa-solid fa-person-circle-question"></i>Hỏi đáp</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="flex-container full-height grid-child-right">
+                <a href="signup.html" class="btn">Đăng kí</a>
+                <a href="login.html" class="btn btn-filled">Đăng nhập</a>
             </div>
         </div>
 
@@ -64,50 +56,42 @@
             <img src="./assets/img/Hinh-Nen-Girl-Xinh-Full-HD-Cho-Laptop-Va-May" alt="">
         </div>
         <!-- Phần cuối -->
-        <div class="footer">
-            <div class="grid__row">
-                <div class="grid__col-2-3">
+        <div class="footer-container">
+            <div class="footer">
+                <div class="container">
                     <div class="footer_logo">
                         <a href="#">
                             <img class="logo-header" src="./assets/img/new-lgoteam.png" alt="logo-team4">
                         </a>
                     </div>
                 </div>
-                <div class="grid__col-2-3">
-                    <div class="footer__contact">
-                        <h1 class="footer__heading">Liên hệ</h1>
-                        <h3>Điện thoại:03xxxxxx</h3>
-                        <h3>Email:examl@mail.com</h3>
-                        <h3>Địa chỉ:Trường ĐH Quy Nhơn</h3>
-                    </div>
+                <div class="container footer__contact">
+                    <h1 class="footer__heading">Liên hệ</h1>
+                    <h3>Điện thoại:03xxxxxx</h3>
+                    <h3>Email:examl@mail.com</h3>
+                    <h3>Địa chỉ:Trường ĐH Quy Nhơn</h3>
                 </div>
-                <div class="grid__col-2-3">
-                    <div class="footer_socials">
-                        <h1 class="footer__heading">Kết nối với chúng tôi</h1>
-                        <li>
-                            <a href=""><i class="icon__socials fa-brands fa-facebook"></i></a>
-                            Facebook
-                        </li>
-                        <li>
-                            <a href=""><i class="icon__socials fa-brands fa-youtube"></i></a>
-                            Youtube
-                        </li>
-                        <li>
-                            <a href=""><i class="icon__socials fa-brands fa-tiktok"></i></a>
-                            Tiktok
-                        </li>
-                    </div>
+                <div class="container footer_socials">
+                    <h1 class="footer__heading">Kết nối với chúng tôi</h1>
+                    <li>
+                        <a href=""><i class="icon__socials fa-brands fa-facebook"></i></a>
+                        Facebook
+                    </li>
+                    <li>
+                        <a href=""><i class="icon__socials fa-brands fa-youtube"></i></a>
+                        Youtube
+                    </li>
+                    <li>
+                        <a href=""><i class="icon__socials fa-brands fa-tiktok"></i></a>
+                        Tiktok
+                    </li>
                 </div>
             </div>
             <div class="footer__more">
                 <p>© 2018 - 2022 LTW4.All rights reserved.</p>
             </div>
         </div>
-
-
-
     </div>
-
 </body>
 
 </html>
