--- a/login.html
+++ b/login.html
@@ -24,14 +24,14 @@
             <div class="form">
                 <span class="title">Đăng nhập</span>
 
-                <form action="#">
+                <form action="dangnhap.php" method="POST">
                     <div class="input-field">
-                        <input type="text" placeholder="Nhập email" required>
+                        <input type="text" name="Username" placeholder="Nhập email" required>
                         <i class="fa-solid fa-envelope icon"></i>
                     </div>
 
                     <div class="input-field">
-                        <input type="password" placeholder="Nhập mật khẩu" required>
+                        <input type="password" name="Password" placeholder="Nhập mật khẩu" required>
                         <i class="fa-solid fa-key icon"></i>
                     </div>
 
