--- a/signup.html
+++ b/signup.html
@@ -24,23 +24,23 @@
             <div class="form">
                 <span class="title">Đăng ký</span>
 
-                <form action="#">
+                <form action="dangki.php" method="POST">
                     <div class="input-field">
-                        <input type="text" placeholder="Nhập họ tên" required>
+                        <input type="text" name="Username" placeholder="Nhập họ tên" required>
                         <i class="fa-solid fa-user"></i>
                     </div>
 
                     <div class="input-field">
-                        <input type="text" placeholder="Nhập email" required>
+                        <input type="text" name="Email" placeholder="Nhập email" required>
                         <i class="fa-solid fa-envelope icon"></i>
                     </div>
 
                     <div class="input-field">
-                        <input type="password" placeholder="Nhập mật khẩu" required>
+                        <input type="password" name="Password" placeholder="Nhập mật khẩu" required>
                         <i class="fa-solid fa-lock"></i>
                     </div>
                     <div class="input-field">
-                        <input type="password" placeholder="Nhập lại mật khẩu" required>
+                        <input type="password" name="Repassword" placeholder="Nhập lại mật khẩu" required>
                         <i class="fa-solid fa-lock"></i>
                     </div>
 
