--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main">
         <div class="grid-container header">
             <a href="#" class="grid-child-left">
-                <img class="logo-header" src="./assets/img/new-lgoteam" alt="logo-team4">
+                <img class="logo-header" src="?" alt="logo-team4">
             </a>
             <nav class="navbar full-height grid-child-stretch">
                 <ul class="navbar-list grid-container full-height">
@@ -48,8 +48,8 @@
 
         </div>
         <div class="girlxinh">
-            <img src="./assets/img/girl-xinh-1-480x600" alt="">
-            <img src="./assets/img/Hinh-Nen-Girl-Xinh-Full-HD-Cho-Laptop-Va-May" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
         </div>
         <!-- Phần cuối -->
         <div class="footer-container">
