--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEB-LTW4</title>
+    <title>Đăng kí tài khoản</title>
     <link rel="stylesheet" href="logincss.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
@@ -22,9 +22,9 @@
         <div class="forms">
             <!-- Đăng ký -->
             <div class="form">
-                <span class="title">Đăng ký</span>
+                <span class="title">Đăng kí</span>
 
-                <form action="dangki.php" method="POST">
+                <form action="signup-validate.php" method="POST">
                     <div class="input-field">
                         <input type="text" name="Username" placeholder="Nhập họ tên" required>
                         <i class="fa-solid fa-user"></i>
