--- a/login.html
+++ b/login.html
@@ -36,15 +36,23 @@
                 element.value = getCookie('username');
             }
         }
+        function errorHandling() {
+            if (checkCookie("loginError"))
+                document.querySelector('.error-message').style.display = 'block';
+            else
+                document.querySelector('.error-message').style.display = 'none';
+        }
     </script>
 </head>
 
 <body
-    onload="setValueFromCookie(document.querySelector('#username')); setValueFromCookie(document.querySelector('#password'))">
+    onload="errorHandling(); setValueFromCookie(document.querySelector('#username')); setValueFromCookie(document.querySelector('#password'))">
     <div class="container">
         <div class="form">
             <span class="title">Đăng nhập</span>
-
+            <div class="error-message">
+                <p>Tên đăng nhập hoặc mật khẩu không chính xác. Vui lòng thử lại!</p>
+            </div>
             <form action="login-validate.php" method="post">
                 <div class="input-field">
                     <i class="fa-solid fa-envelope"></i>
