--- a/header.html
+++ b/header.html
@@ -23,6 +23,6 @@
     </nav>
     <div class="flex-container full-height grid-child-right">
         <a href="signup.html" class="btn">Đăng kí</a>
-        <a href="login.html" class="btn btn-filled">Đăng nhập</a>
+        <a href="login.php" class="btn btn-filled">Đăng nhập</a>
     </div>
 </div>
