--- a/source/html/carousel.html
+++ b/source/html/carousel.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carousel</title>
-    <link rel="stylesheet" href="/assets/css/base.css">
-</head>
-
-<body>
-    <div class="carousel-container">
-        <div class="carousel-group">
-            <img src="/assets/img/banner1.jpg" alt="no image">
-        </div>
-        <div class="carousel-group">
-            <img src="/assets/img/banner2.jpg" alt="no image">
-        </div>
-        <div class="carousel-group">
-            <img src="/assets/img/banner3.jpg" alt="no image">
-        </div>
+<div class="carousel-container">
+    <div class="carousel-group" id="banner-1">
+        <img src="./assets/img/banner1.jpg" alt="no image">
+        <a class="arrow-r" href="#banner-2"></a>
     </div>
-</body>
-
-</html>
+    <div class="carousel-group" id="banner-2">
+        <a class="arrow-l" href="#banner-1"></a>
+        <img src="./assets/img/banner2.jpg" alt="no image">
+        <a class="arrow-r" href="#banner-3"></a>
+    </div>
+    <div class="carousel-group" id="banner-3">
+        <a class="arrow-l" href="#banner-2"></a>
+        <img src="./assets/img/banner3.jpg" alt="no image">
+    </div>
+</div>
