--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="form-container">
         <div class="form">
             <span class="title">Đăng kí</span>
 
