--- a/source/html/header.html
+++ b/source/html/header.html
@@ -8,10 +8,10 @@
                 <a href=""><i class="icon fa-solid fa-house"></i>Trang chủ</a>
             </li>
             <li>
-                <a href="">Bài thi</a>
+                <a href=""><i class="icon fa-solid fa-file"></i>Bài thi</a>
             </li>
             <li>
-                <a href="">Tài liệu</a>
+                <a href=""><i class="icon fa-solid fa-book"></i>Tài liệu</a>
             </li>
             <li>
                 <a href=""><i class="icon fa-solid fa-circle-question"></i>Trợ giúp</a>
