--- a/source/html/home.html
+++ b/source/html/home.html
@@ -1,5 +1,56 @@
-<div class="container">
-    <div class="container-sm">
-        <h1>section 1</h1>
+<div class="main container-sm">
+    <div class="section">
+        <h1 class="section-title">Bộ đề thi tiếng Mĩ</h1>
+        <div class="section-container">
+            <div class="card">
+                <img src="./assets/img/banner1.jpg" alt="" class="card-media">
+                <div class="card-text">
+                    <h1 class="card-title">Trắc nghiệm từ vựng tiếng Mĩ 20p gg</h1>
+                    <p class="card-description txt-wrapped max-line-2">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quam dicta reprehenderit, at quas
+                        assumenda dignissimos ipsum est alias corporis.
+                    </p>
+                    <div class="card-subtext">
+                        <div class="card-total">Số câu: 20</div>
+                        <div class="card-time">Thời gian: 20p</div>
+                        <a href="" class="btn btn-filled float-right">Xem chi tiết</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/img/banner2.jpg" alt="" class="card-media">
+                <div class="card-text">
+                    <h1 class="card-title">Trắc nghiệm từ vựng tiếng Mĩ 20p gg</h1>
+                    <p class="card-description txt-wrapped max-line-2">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quam dicta reprehenderit, at quas
+                        assumenda dignissimos ipsum est alias corporis.
+                    </p>
+                    <div class="card-subtext">
+                        <div class="card-total">Số câu: 20</div>
+                        <div class="card-time">Thời gian: 20p</div>
+                        <a href="" class="btn btn-filled float-right">Xem chi tiết</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/img/banner3.jpg" alt="" class="card-media">
+                <div class="card-text">
+                    <h1 class="card-title">Trắc nghiệm từ vựng tiếng Mĩ 20p gg</h1>
+                    <p class="card-description txt-wrapped max-line-2">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quam dicta reprehenderit, at quas
+                        assumenda dignissimos ipsum est alias corporis.
+                    </p>
+                    <div class="card-subtext">
+                        <div class="card-total">Số câu: 20</div>
+                        <div class="card-time">Thời gian: 20p</div>
+                        <a href="" class="btn btn-filled float-right">Xem chi tiết</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="side-content">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis maxime ipsa tenetur dolorum repudiandae
+            ratione accusamus accusantium atque dolores nulla?</p>
     </div>
 </div>
