--- a/source/html/carousel.html
+++ b/source/html/carousel.html
@@ -1,31 +1,34 @@
 <section class="carousel" aria-label="Gallery">
     <ol class="carousel__viewport">
         <li id="carousel__slide1" tabindex="0" class="carousel__slide">
-            <div class="carousel__snapper"><img src="./assets/img/banner1.jpg" alt=""></div>
-            <a href="#carousel__slide4" class="carousel__prev">Go to last slide</a>
-            <a href="#carousel__slide2" class="carousel__next">Go to next slide</a>
+            <img src="./assets/img/banner1.jpg" alt="">
+            <div class="carousel__snapper"></div>
+            <a href="#carousel__slide3" class="carousel__prev"></a>
+            <a href="#carousel__slide2" class="carousel__next"></a>
         </li>
         <li id="carousel__slide2" tabindex="0" class="carousel__slide">
-            <div class="carousel__snapper"><img src="./assets/img/banner2.jpg" alt=""></div>
-            <a href="#carousel__slide1" class="carousel__prev">Go to previous slide</a>
-            <a href="#carousel__slide3" class="carousel__next">Go to next slide</a>
+            <img src="./assets/img/banner2.jpg" alt="">
+            <div class="carousel__snapper"></div>
+            <a href="#carousel__slide1" class="carousel__prev"></a>
+            <a href="#carousel__slide3" class="carousel__next"></a>
         </li>
         <li id="carousel__slide3" tabindex="0" class="carousel__slide">
-            <div class="carousel__snapper"><img src="./assets/img/banner3.jpg" alt=""></div>
-            <a href="#carousel__slide2" class="carousel__prev">Go to previous slide</a>
-            <a href="#carousel__slide4" class="carousel__next">Go to next slide</a>
+            <img src="./assets/img/banner3.jpg" alt="">
+            <div class="carousel__snapper"></div>
+            <a href="#carousel__slide2" class="carousel__prev"></a>
+            <a href="#carousel__slide1" class="carousel__next"></a>
         </li>
     </ol>
     <aside class="carousel__navigation">
         <ol class="carousel__navigation-list">
             <li class="carousel__navigation-item">
-                <a href="#carousel__slide1" class="carousel__navigation-button">Go to slide 1</a>
+                <a href="#carousel__slide1" class="carousel__navigation-button"></a>
             </li>
             <li class="carousel__navigation-item">
-                <a href="#carousel__slide2" class="carousel__navigation-button">Go to slide 2</a>
+                <a href="#carousel__slide2" class="carousel__navigation-button"></a>
             </li>
             <li class="carousel__navigation-item">
-                <a href="#carousel__slide3" class="carousel__navigation-button">Go to slide 3</a>
+                <a href="#carousel__slide3" class="carousel__navigation-button"></a>
             </li>
         </ol>
     </aside>
