--- a/source/html/header.html
+++ b/source/html/header.html
@@ -5,7 +5,7 @@
     <nav class="navbar full-height grid-child-stretch">
         <ul class="navbar-list grid-container full-height">
             <li>
-                <a href=""><i class="icon fa-solid fa-house"></i>Trang chủ</a>
+                <a href="" class="disabled"><i class="icon fa-solid fa-house"></i>Trang chủ</a>
             </li>
             <li>
                 <a href=""><i class="icon fa-solid fa-file"></i>Bài thi</a>
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <div class="flex-container full-height grid-child-right">
-        <a href="signup.html" class="btn">Đăng kí</a>
+        <a href="signup.php" class="btn">Đăng kí</a>
         <a href="login.php" class="btn btn-filled">Đăng nhập</a>
     </div>
 </div>
