--- a/exam.html
+++ b/exam.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="formcss.css">
+    <link rel="stylesheet" href="exam.css">
     <link rel="stylesheet" href="timer.css">
     <link rel="stylesheet" href="./source/css/base.css">
     <link rel="stylesheet" href="./source/css/main.css">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container-sm">
+    <div class="container">
         <form action="" method="post" class="question-container">
             <div class="question-number">1</div>
             <div id="timer"></div>
@@ -30,12 +30,13 @@
                 <input type="radio" name="Answer" id="D">
                 <label for="D">liking</label>
             </div>
-            <div class="exam-nav">
-                <a class="btn btn-filled btn-prev"><i class="fa-solid fa-circle-arrow-left"></i></a>
-                <a class="btn btn-filled btn-next"><i class="fa-solid fa-circle-arrow-right"></i></a>
-            </div>
         </form>
-
+    </div>
+    <div class="exam-nav-container">
+        <div class="nav-btn-container">
+            <a class="btn btn-filled btn-prev"><i class="fa-solid fa-circle-arrow-left"></i></a>
+            <a class="btn btn-filled btn-next"><i class="fa-solid fa-circle-arrow-right"></i></a>
+        </div>
     </div>
 </body>
 
