--- a/exam.html
+++ b/exam.html
@@ -30,14 +30,15 @@
                 <input type="radio" name="Answer" id="D">
                 <label for="D">liking</label>
             </div>
+            <hr>
+            <div class="nav-btn-container">
+                <a href="" class="btn btn-prev"><i class="fa-solid fa-circle-arrow-left"></i></a>
+                <a href="" class="btn btn-next"><i class="fa-solid fa-circle-arrow-right"></i></a>
+            </div>
         </form>
     </div>
     <div class="exam-nav-container">
-        <div class="nav-btn-container">
-            <a href="" class="btn btn-filled btn-prev"><i class="fa-solid fa-circle-arrow-left"></i></a>
-            <button type="submit" form="exam" class="btn btn-filled">Nộp bài</button>
-            <a href="" class="btn btn-filled btn-next"><i class="fa-solid fa-circle-arrow-right"></i></a>
-        </div>
+        <button type="submit" form="exam" class="btn btn-filled">Nộp bài</button>
         <div class="question-table">
             <a href="" class="btn btn-filled">1</a>
             <a href="" class="btn btn-filled">2</a>
