--- a/source/html/header.html
+++ b/source/html/header.html
@@ -5,10 +5,10 @@
     <nav class="navbar full-height grid-child-stretch">
         <ul class="navbar-list grid-container full-height">
             <li>
-                <a href=""><i class="icon fa-solid fa-house"></i>Trang chủ</a>
+                <a href="./index.php"><i class="icon fa-solid fa-house"></i>Trang chủ</a>
             </li>
             <li>
-                <a href=""><i class="icon fa-solid fa-file"></i>Bài thi</a>
+                <a href="./examSelecting.php"><i class="icon fa-solid fa-file"></i>Bài thi</a>
             </li>
             <li>
                 <a href=""><i class="icon fa-solid fa-book"></i>Tài liệu</a>
