--- a/source/html/examSelect.html
+++ b/source/html/examSelect.html
@@ -1,24 +1,23 @@
 <div class="main container-sm">
     <div class="section">
-        <h1 class="section-title">Bộ đề thi tiếng Mĩ</h1>
+        <h1 class="section-title">Bộ đề thi tiếng Anh</h1>
         <div class="section-container">
             <div class="card">
-                <img src="./assets/img/banner1.jpg" alt="" class="card-media">
+                <img src="./assets/img/banner2.jpg" alt="" class="card-media">
                 <div class="card-text">
-                    <h1 class="card-title">Trắc nghiệm từ vựng tiếng Mĩ 20p gg</h1>
+                    <h1 class="card-title">Trộn đề ngẫu nhiên</h1>
                     <p class="card-description txt-wrapped max-line-2">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quam dicta reprehenderit, at quas
-                        assumenda dignissimos ipsum est alias corporis.
+                        Đề thi này được trộn ngẫu nhiên trong toàn bộ các câu hỏi của các đề thi khác.
                     </p>
                     <div class="card-subtext">
-                        <div class="card-total">Số câu: 20</div>
-                        <div class="card-time">Thời gian: 20p</div>
-                        <a href="" class="btn btn-filled float-right">Xem chi tiết</a>
+                        <div class="card-total">Số câu: 40</div>
+                        <div class="card-time">Thời gian: 40p</div>
+                        <a href="./exam.php" class="btn btn-filled float-right">Xem chi tiết</a>
                     </div>
                 </div>
             </div>
             <div class="card">
-                <img src="./assets/img/banner2.jpg" alt="" class="card-media">
+                <img src="./assets/img/banner1.jpg" alt="" class="card-media">
                 <div class="card-text">
                     <h1 class="card-title">Trắc nghiệm từ vựng tiếng Mĩ 20p gg</h1>
                     <p class="card-description txt-wrapped max-line-2">
