--- a/source/html/examSelect.html
+++ b/source/html/examSelect.html
@@ -48,8 +48,14 @@
             </div>
         </div>
     </div>
-    <div class="side-content">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis maxime ipsa tenetur dolorum repudiandae
-            ratione accusamus accusantium atque dolores nulla?</p>
+    <div class="section">
+        <h1 class="section-title">Loại bài thi</h1>
+        <div class="section-container">
+            <ul>
+                <li><input type="checkbox" name="a" id=""><label for="a">a</label></li>
+                <li><input type="checkbox" name="b" id=""><label for="b">b</label></li>
+                <li><input type="checkbox" name="c" id=""><label for="c">c</label></li>
+            </ul>
+        </div>
     </div>
 </div>
